--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,6 @@
         document.getElementById("name").innerHTML = wordlist[document.getElementById("lessonselect").value-1][no];
         document.getElementById("title").innerHTML = wordlist[document.getElementById("lessonselect").value-1][no];
         if (times == 0) {
-            notification.close();
             popNotice();
         }
         audio.play();
@@ -179,6 +178,12 @@
 				notification.onclick = function() {
 					notification.close();    
 				};
+                notification.onshow = function() {
+					setTimeout(function(){
+                        notification.close;
+                    },1000)  
+				};
+
 			}    
 		};
 
